--- a/children/application1.yaml
+++ b/children/application1.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   destination:
     namespace: guestbook-one
-    server: https://kubernetes.default.svc
+    name: staging-01
   project: default
   source:
     path: guestbook
