--- a/children/application2.yaml
+++ b/children/application2.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   destination:
     namespace: guestbook-two
-    server: https://kubernetes.default.svc
+    name: staging-01
   project: default
   source:
     path: guestbook
