--- a/parent/parent.yaml
+++ b/parent/parent.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: parent
+  name: konrad-testing-parent
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
 spec:
@@ -11,7 +11,7 @@ spec:
   project: default
   source:
     path: children
-    repoURL: https://github.com/jannfis/app-of-apps
+    repoURL: https://github.com/zichul/app-of-apps
     targetRevision: HEAD
   syncPolicy:
     automated:
